preseed (1.23) UNRELEASED; urgency=low

  * Add modules as an alias for anna/choose_modules.

 -- Colin Watson <cjwatson@debian.org>  Wed, 13 Dec 2006 10:23:34 +0000

preseed (1.22) unstable; urgency=low

  * Allow preseeding debconf values for the target system at the command
    line using an expanded syntax that includes the owner of the question:
    "owner:question=value"
    If this expanded syntax is not used, only d-i is preseeded.
    Closes: #400694
  * "tasks" is now an alias for "tasksel:tasksel/first", so it will
    actually work now.

  [ Updated translations ]
  * Panjabi (pa.po) by A S Alam

 -- Joey Hess <joeyh@debian.org>  Tue, 28 Nov 2006 13:36:22 -0500

preseed (1.21) unstable; urgency=low

  [ Joey Hess ]
  * Fix typoed name of /var/run/preseed-usedfloppy. Closes: #397668

  [ Updated translations ]
  * Bulgarian (bg.po) by Damyan Ivanov
  * Bosnian (bs.po) by Safir Secerovic
  * Esperanto (eo.po) by Serge Leblanc
  * Georgian (ka.po) by Aiet Kolkhi
  * Kurdish (ku.po) by rizoye-xerzi
  * Norwegian Bokmål (nb.po) by Bjørn Steensrud

 -- Frans Pop <fjp@debian.org>  Wed, 22 Nov 2006 15:16:04 +0100

preseed (1.20) unstable; urgency=low

  * Fix some busted shell code in file-preseed that made it _always_
    add "file://floppy://" to preseeded filenames. I must quote fjp here:
    <fjp> Huray for testing :-P
    (Untested..)

 -- Joey Hess <joeyh@debian.org>  Sun, 22 Oct 2006 18:09:15 -0400

preseed (1.19) unstable; urgency=low

  [ Philip Hands ]
  * add test to prevent cat-ing non-existent file in preseed_fetch

  [ Updated translations ]
  * Belarusian (be.po) by Andrei Darashenka
  * Hungarian (hu.po) by SZERVÁC Attila
  * Kurdish (ku.po) by Erdal Ronahi
  * Norwegian Bokmål (nb.po) by Bjørn Steensrud
  * Nepali (ne.po) by Shiva Prasad Pokharel
  * Tamil (ta.po) by Damodharan Rajalingam
  * Vietnamese (vi.po) by Clytie Siddall

 -- Joey Hess <joeyh@debian.org>  Fri, 20 Oct 2006 17:11:43 -0400

preseed (1.18) unstable; urgency=low
