@@ -1,8 +1,15 @@
 preseed (1.23) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * Add modules as an alias for anna/choose_modules.
 
- -- Colin Watson <cjwatson@debian.org>  Wed, 13 Dec 2006 10:23:34 +0000
+  [ Joey Hess ]
+  * Move logging of preseeded values into debconf-set-selections, after
+    it has parsed the file and removed continuation lines. This allows
+    the post-base-installer hook to use a simple grep and not need to worry
+    about continuation lines.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 21 Dec 2006 09:55:31 -0500
 
 preseed (1.22) unstable; urgency=low
 
